# ovr-mobile-sys

./: Cargo.toml  build.rs  generate_bindings.sh
VrApi-1.40/: wrapper.h
src/: bindings.rs  bindings_android.rs  helpers.rs  lib.rs
