[package]
authors = ["Imanol Fernandez <mortimergoro@gmail.com>", "Oculus Team"]
build = "build.rs"
description = "Rust bindings for Oculus VR Mobile SDK"
name = "ovr-mobile-sys"
version = "0.4.0"

homepage = "https://github.com/MortimerGoro/ovr-mobile-sys"
keywords = ["vr", "oculus", "mobile", "sdk", "gear"]
license = "Apache-2.0"
repository = "https://github.com/MortimerGoro/ovr-mobile-sys"

[dependencies]
jni-sys = "0.3.0"
